# widget

./: README.md  pyproject.toml  setup.cfg
src/widget/: __init__.py  widget.py
