# setup.cfg file at the root directory
[metadata]
name = widget
version = 1.0.1
author = Jonathan Byrne
description = Sample for packaging a Python project
long_description = This is a sample project for packaging a Python project
url = https://github.com/squeakus/widget.git
keywords = widget
[options]
python_requires = >=3.7
install_requires = 
    pandas
[options.extras_require]
test = 
    pytest
    coverage
[options.package_data]
sample = 
    'example_data.csv'

